Fix missing config in -done.yml and write docs
Signed-off-by: Michael Ducy <michael@chef.io>

--- a/docker-compose-done.yml
+++ b/docker-compose-done.yml
@@ -19,6 +19,6 @@
       links:
         - national-parks:np
       environment:
-        HAB_HAPROXY: "bind = '*:8080'"
+        HAB_HAPROXY: "bind = '*:8080'\nstatus_page = true"
       command: --peer np --bind backend:national-parks.default
     
